# astonish

./: .dockerignore  .editorconfig  .env.example  .env.integration.example  .gitignore  .golangci.yml  .openclaude-profile.json  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.e2e  Dockerfile.incus  LICENSE  MANIFEST.in  Makefile  Makefile.integration  PARAMETER_PASSING.md  README.md  REUSE.toml  atlas.hcl  buf.gen.yaml  buf.yaml  docker-compose.e2e.yml  docker-compose.yml  go.mod  go.sum  index.html  install.sh  main.go  pyproject.toml  pytest.ini  sitemap.xml  test_params.py  tools.go
.githooks/: pre-commit
.github/: RELEASE_PROCESS.md  dependabot.yml
.github/workflows/: beta-release.yml  build.yml  deploy-docs.yml  deploy.yml  docker-images.yml  docker-incus.yml  lint.yml  publish.yml  release.yml  test-deploy.yml  update-homebrew.yml
.omo/drafts/: fix-golangci-g124-schema.md  per-chat-app-model-pin.md
.omo/evidence/: task-1-fix-golangci-g124-schema.txt  task-4-per-chat-app-model-pin.diff  task-5-per-chat-app-model-pin.diff
.omo/plans/: fix-golangci-g124-schema.md  fleet-generic-orchestration.md  per-chat-app-model-pin.md
.omo/run-continuation/: ses_0b5a050b2ffeZvEsfCtAu24sAH.json  ses_0b5b0327fffetWw4HV5iRscDNL.json  ses_0b5bb4b16ffe5Gd1vbp7ilSY4z.json  ses_0b5bed08cffejzG0ccS7LfWz02.json  ses_0b5c2ec98ffelng7jebfbu5I51.json  ses_0b5c9e5aeffeuJ45LReeH82F51.json  ses_0b5cf8fbeffeRUfhZ61S3RB14r.json  ses_0b5ec9710ffeo1IWy59pH8N9UZ.json  ses_0b6049089ffeCm7KieIQEEtOLM.json  ses_0b623343cffdBCkrnxXCDU2hUM.json  ses_0b623369effel5ZmljwfSLyn4w.json  ses_0b623e748ffepqbhv8MoBz3Z0w.json  ses_0b623e93effe3iphAACIyqNXOI.json  ses_0b624492bffenZFk3fEg0XdnZO.json  ses_0b6302818ffeHMdW0o3r5tW1gB.json  ses_0b630746effePXEKcykY6F3ekN.json  ses_0b630b7cbffeh1awrAA1458qDe.json  (+57 more)
agents_sample/: travelplanner.yaml
astonish/: globals.py  logo.py  main.py
blog/: atom.xml  index.html  rss.xml
docker/: entrypoint-incus.sh
docs/: Makefile  TESTING.md  astro.config.mjs  docusaurus.config.ts  google-adk-integration.md  package-lock.json  package.json  sidebars.ts  testing-docker-incus.md  tsconfig.json
ent/: AGENTS.md
markdown-page/: index.html
mcp_config_examples/: tavily.json
scripts/: atlas-baseline.sh  smoke-layer-chain.sh  strip-atlas-pro.sh  update-mcp-stars.py  verify-e2e-seed.sh
tests/: AGENTS.md
web/: embed.go  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.sandbox.js  vitest.config.ts
(+2647 files in other folders)
