[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "astonish",
    "astonish.providers",
    "astonish.factory",
    "astonish.tools",
    "astonish.agents",
    "astonish.core"
]

[project]
name = "astonish"
version = "0.4.1"
authors = [
    {name = "Rafael Schardosin Silva", email = "rafael.rs@gmail.com"},
]
description = "Astonish AI Companion"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs",
    "generative-ai-hub-sdk[all]",
    "langchain-ollama",
    "langchain",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "pydantic",
    "colorama",
    "langchain-mcp-adapters",
    "aiosqlite",
    "grandalf"
]

[project.urls]
"Homepage" = "https://github.com/schardosin/astonish"

[project.scripts]
astonish = "astonish.main:run"
