[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "astonish",
    "astonish.providers",
    "astonish.factory",
    "astonish.tools",
    "astonish.agents",
    "astonish.core"
]

[project]
name = "astonish"
version = "0.8.1"
authors = [
    {name = "Rafael Schardosin Silva", email = "rafael.rs@gmail.com"},
]
description = "Astonish AI Companion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs==1.4.4",
    "generative-ai-hub-sdk[all]==4.10.2",
    "langchain-ollama==0.3.1",
    "langchain==0.3.24",
    "langgraph==0.3.27",
    "langgraph-checkpoint-sqlite==2.0.6",
    "pydantic==2.10.6",
    "langchain-mcp-adapters==0.0.9",
    "aiosqlite==0.21.0",
    "grandalf==0.8",
    "pykwalify==1.8.0",
    "inquirer==3.4.0",
    "langchain-anthropic==0.3.12",
    "langchain-google-genai==2.1.4",
    "rich==14.0.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.urls]
"Homepage" = "https://github.com/schardosin/astonish"

[project.scripts]
astonish = "astonish.main:run"
